# nebo-tasks

./: .gitignore  README.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
compute_autoscaling/: README.md  alb.tf  autoscaling.tf  launch_template.tf  monitoring.tf  networking.tf  outputs.tf  variables.tf
compute_custom_ami/: README.md  main.tf  outputs.tf  variables.tf
compute_serverless/: .gitignore  README.md  eventbridge.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  outputs.tf  variables.tf
custom_metrics_logging/: .gitignore  Dockerfile  README.md  custom_metrics_logging.md  ecr.tf  main.tf  monitoring.py  monitoring.tf  networking.tf  pyproject.toml  variables.tf
databases_nosql_instance/: .terraform.lock.hcl  README.md  VALIDATION-CHECKLIST.md  dynamodb.tf  iam.tf  main.tf  outputs.tf  provision_dynamodb.md  terraform.tfstate  variables.tf
databases_sql_instance/: README.md  main.tf  networking.tf  outputs.tf  rds.tf  secrets.tf  security_groups.tf  terraform.tfvars.example  variables.tf
iaac_secret_management/: .gitignore  DEPLOYMENT_CHECKLIST - for deletion after deployment.md  QUICKSTART.md  README.md  TESTING.md  example-application.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
network_infrastructure/: README.md  compute.tf  flow_logs.tf  iam.tf  main.tf  nacl.tf  nat_gateway.tf  networking.tf  outputs.tf  security_groups.tf  variables.tf  vpc.tf
network_traffic_controls/: .terraform.tfstate.lock.info  README.md  compute.tf  (+9 more)
observability_custom_metrics_logging/fastapi-docker-optimized/: Dockerfile  pyproject.toml  server.py
(+58 files in other folders)
